--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,10 @@
+<% if book.errors.any? %>
+  <%= pluralize(book.errors.count, "error") %> prohibited this book from being saved:
+  <% book.errors.full_messages.each do |message| %>
+    <%= message %>
+  <% end %>
+<% end %>
+
 <div class="container">
  <div class="row">
   <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
