--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -20,6 +20,8 @@
              <th colspan="1"></th>
              <th>Title</th>
              <th>Opinion</th>
+             <th colspan="4"></th>
+             <th colspan="5"></th>
             </tr>
            </thead>
            <today>
@@ -33,6 +35,7 @@
                <td class="book-title"><%= link_to book.title,book_path(book) %></td>
                <td class="book-body"><%= book.body %></td>
                <td class="favorite"><%= render 'books/favo', book: book %></td>
+               <td>コメント件数：<%= book.book_comments.count %></td>
               </tr>
              <% end %>
            </today>
