--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -15,6 +15,7 @@
               <td class="book-title"><%= link_to @book.title, book_path(params[:id]) %></td>
               <td class="book-body"><%= @book.body %></td>
               <td class="favorite"><%= render 'books/favo', book: @book %></td>
+              <td class="comment">コメント件数：<%= @book.book_comments.count %></td>
               <% if @book.user == current_user %>
                 <td>
                   <button type="button" class="btn btn-success">
@@ -30,6 +31,23 @@
             </tr>
           </today>
         </table>
+        <table class="comments">
+          <% @book.book_comments.each do |book_comment| %>
+          <td>
+            <%= link_to user_path(@book.user) do %>
+              <%= attachment_image_tag @book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
+                <p><%= @book.user.name %></p>
+            <% end %>
+          </td>
+          <td><%= book_comment.comment %></td>
+          <% end %>
+          </table>
+          <div class="new-comment">
+          <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
+            <%= f.text_area :comment, rows:'5', cols:"100" %>
+            <%= f.submit "送信" %>
+          <% end %>
+        </div>
     </div>
   </div>
 </div>
