--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,7 +12,7 @@
                    <p><%= @book.user.name %></p>
                   <% end %>
               </td>
-              <td class="book-title"><%= link_to @book.title, book_path(params[:id]) %></td>
+              <td class="book-title"><%= link_to @book.title, book_path(@book.id) %></td>
               <td class="book-body"><%= @book.body %></td>
               <td class="favorite"><%= render 'books/favo', book: @book %></td>
               <td class="comment">コメント件数：<%= @book.book_comments.count %></td>
@@ -32,20 +32,42 @@
           </today>
         </table>
         <table class="comments">
-          <% @book.book_comments.each do |book_comment| %>
-          <td>
-            <%= link_to user_path(@book.user) do %>
-              <%= attachment_image_tag @book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
-                <p><%= @book.user.name %></p>
+          <today>
+            <tr>
+              <% @book.book_comments.each do |book_comment| %>
+              <td>
+                <%= link_to user_path(book_comment.user) do %>
+                  <%= attachment_image_tag book_comment.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
+                    <p><%= book_comment.user.name %></p>
+                <% end %>
+              </td>
+              <td><%= book_comment.comment %></td>
+                <% if book_comment.user == current_user %>
+                <td class="comment-delete">
+                  <button type="button" class="btn btn-danger">
+                  <%= link_to "Destyoy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class:"text-light" %>
+                  </button>
+                </td>
+                <% end %>
+              </tr>
             <% end %>
-          </td>
-          <td><%= book_comment.comment %></td>
-          <% end %>
+          </today>
           </table>
+          <% if @book_comment.errors.any? %>
+            <div id="error_explanation">
+              <h2><%= @book_comment.errors.count %> error prohibited this product from being saved:</h2>
+               <ul>
+                <% @book_comment.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                <% end %>
+               </ul>
+             </div>
+          <% end %>
           <div class="new-comment">
           <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
             <%= f.text_area :comment, rows:'5', cols:"100" %>
             <%= f.submit "送信" %>
+
           <% end %>
         </div>
     </div>
