--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -12,10 +12,30 @@
       <th>introduction</th>
       <th class="introduction"><%= user.introduction %></xth>
      </tr>
+     <tr>
+      <th>Follows</th>
+      <th class="Follows"><%= link_to user.followings.count, user_followings_path(user.id) %></th>
+     </tr>
+     <tr>
+      <th>Followers</th>
+      <th class="Followers"><%= link_to user.followers.count, user_followers_path(user.id) %></th>
+     </tr>
     </today>
    </table>
    <div class="row">
+     <% if user == current_user %>
        <%= link_to "", edit_user_path(user), class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
+     <% else %>
+       <% if current_user.following?(user) %>
+         <button type="button" class="btn btn-success">
+           <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class:"text-light" %>
+         </button>
+       <% else %>
+         <button type="button" class="btn btn-info">
+           <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class:"text-light" %>
+         </button>
+        <% end %>
+     <% end %>
    </div>
    <h2 class="mt-3">New book</h2>
    <%= form_with model: book_new, local: true do |f| %>
