--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,6 +18,17 @@
               <%= attachment_image_tag user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
             </td>
             <td class="user_name"><%= user.name %></td>
+            <td>フォロー数: <%= user.followings.count %></td>
+            <td>フォロワー数: <%= user.followers.count %></td>
+            <td>
+              <% unless current_user == user %>
+                <% if current_user.following?(user) %>
+                  <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
+                <% else %>
+                  <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
+                <% end %>
+              <% end %>
+            </td>
             <td class="user_show"><%= link_to"Show", user_path(user.id) %></td>
           </tr>
             <% end %>
