--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,6 +68,7 @@
          </div>
         </div>
       </nav>
+      <%= render 'searches/form' %>
     </header>
 <main>
 <div class="notifications">
