--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -31,28 +31,7 @@
             </tr>
           </today>
         </table>
-        <table class="comments">
-          <today>
-            <tr>
-              <% @book.book_comments.each do |book_comment| %>
-              <td>
-                <%= link_to user_path(book_comment.user) do %>
-                  <%= attachment_image_tag book_comment.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
-                    <p><%= book_comment.user.name %></p>
-                <% end %>
-              </td>
-              <td><%= book_comment.comment %></td>
-                <% if book_comment.user == current_user %>
-                <td class="comment-delete">
-                  <button type="button" class="btn btn-danger">
-                  <%= link_to "Destyoy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class:"text-light" %>
-                  </button>
-                </td>
-                <% end %>
-              </tr>
-            <% end %>
-          </today>
-          </table>
+        <%= render 'books/come', book: @book %>
           <% if @book_comment.errors.any? %>
             <div id="error_explanation">
               <h2><%= @book_comment.errors.count %> error prohibited this product from being saved:</h2>
