--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -31,23 +31,11 @@
             </tr>
           </today>
         </table>
-        <%= render 'books/come', book: @book %>
-          <% if @book_comment.errors.any? %>
-            <div id="error_explanation">
-              <h2><%= @book_comment.errors.count %> error prohibited this product from being saved:</h2>
-               <ul>
-                <% @book_comment.errors.full_messages.each do |message| %>
-                  <li><%= message %></li>
-                <% end %>
-               </ul>
-             </div>
-          <% end %>
-          <div class="new-comment">
-          <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
-            <%= f.text_area :comment, rows:'5', cols:"100" %>
-            <%= f.submit "送信" %>
-
-          <% end %>
+        <table id="comments_area">
+            <%= render 'books/come', book: @book, book_comments: @book_comments %>
+        </table>
+        <div id="form">
+           <%= render 'book_comments/form', book: @book, book_comment: @book_comment %>
         </div>
     </div>
   </div>
